# vpilot

./: .gitignore  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-web.yml  package-extension.yml
backend/: Dockerfile  function_app.py  pyproject.toml
backend/src/venkat_pilot/: app.py  settings.py
backend/src/venkat_pilot/api/: chat.py  screenshot.py  synthesize.py
backend/src/venkat_pilot/core/: blob_store.py  context_store.py  llm_client.py
backend/src/venkat_pilot/models/: message.py
backend/src/vpilot/: app.py  settings.py
backend/src/vpilot/api/: chat.py  screenshot.py  synthesize.py
backend/src/vpilot/core/: blob_store.py  context_store.py  llm_client.py
backend/src/vpilot/models/: action.py
backend/tests/unit/: test_api.py  test_llm_client.py  test_models.py  test_screenshot.py  test_stores.py
extension/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
extension/src/: manifest.ts
extension/src/background/: service-worker.ts
extension/src/content/: actor.ts  extractor.ts
extension/src/lib/: api.ts  storage.ts  types.ts
extension/src/popup/: index.html  main.tsx
extension/src/side-panel/: App.tsx  index.css  index.html
extension/src/side-panel/components/: ActionApproval.tsx  ChatInput.tsx  ChatMessage.tsx  SettingsPanel.tsx
extension/src/side-panel/hooks/: useChat.ts
infra/: main.bicep
infra/modules/: cosmos.bicep  functions.bicep  staticwebapp.bicep  storage.bicep
infra/parameters/: dev.bicepparam
web/: index.html  staticwebapp.config.json  styles.css
